# IBStilpnomelane

./: .gitignore  Compiled_xrd.csv  README.md  check_sem_assays.py  convert_xrd_assays.py  db_to_vtk.py  eda_stilpnomelane.py  get_ib_data.py  measured_minerals.csv  normative.py  parse_minerals.py  parse_minerals_v2_loi_total.py  pyproject.toml  qccharts.py  requirements.txt  test.py  xrd_data_format.py
database/: assays.sql  brazilian_test.sql
normative/src/config/: solution_order.csv
reference/: AN0767- QXRD UNROUNDED data.csv  BV_XRD_Assay_Merge.csv  BV_XRD_Assay_Merge_2.csv  BV_XRD_Assay_Merge_3.csv  Batch2_XRD_Assay_From_BBWi.csv  BenCompXRD.csv  CSIRO_Plugs.csv  DTW53_assays.csv  PlugAssayXRD.csv  TIMA_AXT_Cons_and_tails.csv  billet_assay.csv  billet_xrd.csv  compiled_assays.csv  compiled_xrd.csv  head_assays.csv  head_qxrd.csv  measured_minerals.csv  mineral_to_xrd.csv  minerals.csv  selected_minerals.csv  sem_assays.csv  solution_order.csv  solution_order_2.csv
src/: create_mineralogy.py
src/mineralogy/: Mineralogy.py
src/normative/: normative.py
src/parser/: parser.py
src/reference/: mineral_to_xrd.csv  minerals.csv  solution_order.csv  xrd_and_assay.csv
src/v1/: normative.py
