[tool.poetry]
name = "ibstilpnomelane"
version = "0.1.0"
description = "creates a normative mineralogy from assays"
authors = ["Ben Chi <benjamin.chi@fmgl.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
numpy = "*"
pandas = "*"
scikit-learn = "*"
pyodbc = "*"
chempy = "*"
[tool.poetry.group.dev.dependencies]
chempy = "^0.8.3"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
